--- a/wercker.yml
+++ b/wercker.yml
@@ -11,6 +11,13 @@ build:
         sudo apt-get update
         sudo apt-get install -y mono-devel 
     - script:
+      name: install bats
+      code: |
+        git clone https://github.com/sstephenson/bats.git
+        pushd bats
+        ./install.sh /usr/local
+        popd
+    - script:
       name: run tests
       code: |
         . ./run.bats
