--- a/wercker.yml
+++ b/wercker.yml
@@ -11,6 +11,9 @@ build:
         sudo apt-get update
         sudo apt-get install -y mono-devel 
     - script:
+      name: install git
+      code: sudo apt-get install git
+    - script:
       name: install bats
       code: |
         git clone https://github.com/sstephenson/bats.git
