--- a/wercker.yml
+++ b/wercker.yml
@@ -1,15 +1,11 @@
-box: debian
+box: nodesource/jessie
 build:
   steps:
     - script:
       name: install mono
       code : |
-        sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
-        echo "deb http://download.mono-project.com/repo/debian wheezy main" | sudo tee /etc/apt/sources.list.d/mono-xamarin.list
-        echo "deb http://download.mono-project.com/repo/debian wheezy-apache24-compat main" | sudo tee -a /etc/apt/sources.list.d/mono-xamarin.list
-        echo "deb http://download.mono-project.com/repo/debian wheezy-libjpeg62-compat main" | sudo tee -a /etc/apt/sources.list.d/mono-xamarin.list
         sudo apt-get update
-        sudo apt-get install -y mono-devel 
+        sudo apt-get install -y mono-complete
     - script:
       name: install git
       code: sudo apt-get install -y git
